--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <img  class="logo" src="./images/logos.png" alt="logo">
             <ul>
                 <li class="listItems"><a class="links" href="#home">HOME</a></li>
-                <li class="listItems"><a class="links" href="#about">ABOUT</a></li>
+                <li class="listItems"><a class="links" href="#about">ABOUT ME</a></li>
                 <li class="listItems"><a class="links" href="#skills">SKILLS</a></li>
-                <li class="listItems"><a class="links" href="#contact">CONTACT</a></li>
+                <li class="listItems"><a class="links" href="#contact">CONTACTS</a></li>
             </ul>
          </nav>
          <!-- home -->
